[project]
name = "pilot-study"
version = "0.1.0"
description = "Offline rollout generation, clustering, and metrics evaluation for an LLM RL pilot study."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "accelerate>=0.30.0",
    "datasets>=2.19.0",
    "numpy>=1.26.0",
    "openai>=1.52.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.2.0",
    "tqdm>=4.66.0",
    "transformers>=4.51.1,<5",
    "vllm>=0.8.5",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "platform_system != 'Darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
